Avoid DanglingHREFException saving dynamic working sets
https://github.com/eclipse-platform/.github/issues/56